iOS bottom cutoff mobile filter fix

--- a/styles/components/page/Product/_ProductFilterResponsive.scss
+++ b/styles/components/page/Product/_ProductFilterResponsive.scss
@@ -24,6 +24,16 @@
 			letter-spacing: -0.32px;
 		}
 	}
+	.iosFix {
+		@supports (-webkit-touch-callout: none) {
+			position: relative;
+			bottom: 7.5rem;
+			background-color: #F0F2F2;
+		}
+	}
+	.paddingFix {
+		padding-bottom: 8rem;
+	}
 	.buttons {
 		.n-btn {
 			font-size: 10px;
@@ -142,6 +152,7 @@
 	.product_filter_responsive_modal {
 		width: 100%;
 		height: calc(100% - 130px);
+		// padding-bottom: 8rem;
 		// position: absolute;
 		// top: ;
 		overflow: auto;
